# dotfiles

./: .claudeignore  .crit.config.json  .cursorignore  .gitignore  .mcp.json  .tmux.conf  .worktreeinclude  .zshrc  AGENTS.md  Brewfile  CLAUDE.md  CURSOR.md  EXAMPLE.md  HANDOFF-2026-05-09-skill-revitalization.md  HANDOFF-2026-05-11-skill-revitalization.md  HANDOFF-2026-05-20-gamma3-skill-pruning.md  PLANS.md  README.md  Taskfile.yml  context.md  karpathy_llm_kb_extraction.json  lefthook.yml  llms.txt  renovate.json  ruff.toml
.bin/: assert-defaults.sh  claude-hooks  claude-observe.sh  gen_daily_report.sh  init-install.sh  list-dotfiles-symlinks.sh  restart-wm.sh  symlink.sh  validate_configs.sh  validate_readmes.sh  validate_symlinks.sh
.claude/: settings.json  settings.local.json
.codex/: AGENTS.md  config.toml
.config/: starship.toml
.config/claude/references/mcp-server-template/: README.md  __init__.py  __main__.py  pyproject.toml  server.py
.cursor/: hooks.json
.gemini/: GEMINI.md
.hammerspoon/: README.md  daily_enforcer.lua  init.lua
docs/: agent-harness-contract.md  decommission-log.md
docs/wiki/: log.md  (+1 more)
nix/: README.md  flake.nix
references/: data-analysis-patterns.md  voice-profile-guide.md
scripts/runtime/research-agent/: README.md  pyproject.toml
scripts/runtime/research-agent/research_agent/: __init__.py  __main__.py  config.py  experience.py  graph.py  llm.py  reflexion.py  state.py  tools.py
scripts/runtime/research-agent/tests/: test_experience.py  test_graph.py  test_tools.py
tools/: cleanup-fm010-pass.py  cleanup-fm012-info.py  (+1 more)
(+1935 files in other folders)
