[project]
name = "research-agent"
version = "0.1.0"
description = "Self-evolving arXiv literature research agent (Agentic AI textbook §12.7 v1)"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=2.0",
    "langchain-anthropic>=0.3",
    "langchain-core>=0.3",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["research_agent"]
